--- a/wap/store_sns.html
+++ b/wap/store_sns.html
@@ -48,7 +48,7 @@
 <div class="left-content">
 <?php if ($output['is_owner']){ ?>
     <ul class="release-tab">
-      <li class="sharemood"><em></em><a href="javascript:void(0)" style="cursor: default;"></a></li>
+      <li class="sharemood"><em>111</em><a href="javascript:void(0)" style="cursor: default;">1112</a></li>
     </ul>
     <div class="release-content"><span class="arrow"></span>
       <form id="weiboform" method="post" action="index.php?act=member_snsindex&op=addtrace">
