--- a/wap/store_sns.html
+++ b/wap/store_sns.html
@@ -50,6 +50,12 @@
     <ul class="release-tab">
       <li class="sharemood"><em>111</em><a href="javascript:void(0)" style="cursor: default;">1112</a></li>
     </ul>
+<div class="tabmenu">
+    <ul class="tab">
+     
+    </ul>
+  </div>
+
     <div class="release-content"><span class="arrow"></span>
       <form id="weiboform" method="post" action="index.php?act=member_snsindex&op=addtrace">
           <div class="content"></div>
