--- a/wap/store_sns.html
+++ b/wap/store_sns.html
@@ -48,12 +48,10 @@
 <div class="left-content">
 <?php if ($output['is_owner']){ ?>
     <ul class="release-tab">
-      <li class="sharemood"><em>111</em><a href="javascript:void(0)" style="cursor: default;">1112</a></li>
+        <li class="sharemood"><em></em><a href="javascript:void(0)" style="cursor: default;" class="store_name">1112</a></li>
     </ul>
 <div class="tabmenu">
-    <ul class="tab">
-     
-    </ul>
+    
   </div>
 
     <div class="release-content"><span class="arrow"></span>
